backend/grammar.output
State 12 conflicts: 4 shift/reduce
State 23 conflicts: 5 shift/reduce


Grammar

    0 $accept: commands $end

    1 commands: %empty
    2         | commands command

    3 command: def
    4        | arg

    5 identifiers: IDENTIFIER
    6            | identifiers ',' IDENTIFIER

    7 template_def_permissive: IDENTIFIER
    8                        | NUMBER

    9 template_def_permissives: template_def_permissive
   10                         | template_def_permissives ',' template_def_permissive

   11 template_def: %empty
   12             | '(' identifiers ')' '{' template_def_permissives '}'

   13 template_defs: template_def
   14              | template_defs ',' template_def

   15 $@1: %empty

   16 $@2: %empty

   17 arg: ARG IDENTIFIER $@1 '{' $@2 template_defs '}'

   18 $@3: %empty

   19 arg_template: ARG_TEMPLATE '{' $@3 template_defs '}'

   20 $@4: %empty

   21 assemble: ASSEMBLE '{' $@4 STRING '}'

   22 $@5: %empty

   23 max: MAX '{' $@5 template_defs '}'

   24 $@6: %empty

   25 encode: ENCODE '{' $@6 STRING '}'

   26 def_branch: assemble
   27           | arg_template
   28           | max
   29           | encode
   30           | %empty

   31 recusive_def_branch: def_branch
   32                    | recusive_def_branch def_branch

   33 $@7: %empty

   34 def: DEF IDENTIFIER $@7 '{' recusive_def_branch '}'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 12
    ')' (41) 12
    ',' (44) 6 10 14
    '{' (123) 12 17 19 21 23 25 34
    '}' (125) 12 17 19 21 23 25 34
    error (256)
    DEF (258) 34
    IDENTIFIER (259) 5 6 7 17 34
    ARG (260) 17
    ENCODE (261) 25
    MAX (262) 23
    ARG_TEMPLATE (263) 19
    ASSEMBLE (264) 21
    NUMBER (265) 8
    STRING (266) 21 25


Nonterminals, with rules where they appear

    $accept (17)
        on left: 0
    commands (18)
        on left: 1 2
        on right: 0 2
    command (19)
        on left: 3 4
        on right: 2
    identifiers (20)
        on left: 5 6
        on right: 6 12
    template_def_permissive (21)
        on left: 7 8
        on right: 9 10
    template_def_permissives (22)
        on left: 9 10
        on right: 10 12
    template_def (23)
        on left: 11 12
        on right: 13 14
    template_defs (24)
        on left: 13 14
        on right: 14 17 19 23
    arg (25)
        on left: 17
        on right: 4
    $@1 (26)
        on left: 15
        on right: 17
    $@2 (27)
        on left: 16
        on right: 17
    arg_template (28)
        on left: 19
        on right: 27
    $@3 (29)
        on left: 18
        on right: 19
    assemble (30)
        on left: 21
        on right: 26
    $@4 (31)
        on left: 20
        on right: 21
    max (32)
        on left: 23
        on right: 28
    $@5 (33)
        on left: 22
        on right: 23
    encode (34)
        on left: 25
        on right: 29
    $@6 (35)
        on left: 24
        on right: 25
    def_branch (36)
        on left: 26 27 28 29 30
        on right: 31 32
    recusive_def_branch (37)
        on left: 31 32
        on right: 32 34
    def (38)
        on left: 34
        on right: 3
    $@7 (39)
        on left: 33
        on right: 34


State 0

    0 $accept: . commands $end
    1 commands: . %empty
    2         | . commands command

    $default  reduce using rule 1 (commands)

    commands  go to state 1


State 1

    0 $accept: commands . $end
    2 commands: commands . command
    3 command: . def
    4        | . arg
   17 arg: . ARG IDENTIFIER $@1 '{' $@2 template_defs '}'
   34 def: . DEF IDENTIFIER $@7 '{' recusive_def_branch '}'

    $end  shift, and go to state 2
    DEF   shift, and go to state 3
    ARG   shift, and go to state 4

    command  go to state 5
    arg      go to state 6
    def      go to state 7


State 2

    0 $accept: commands $end .

    $default  accept


State 3

   34 def: DEF . IDENTIFIER $@7 '{' recusive_def_branch '}'

    IDENTIFIER  shift, and go to state 8


State 4

   17 arg: ARG . IDENTIFIER $@1 '{' $@2 template_defs '}'

    IDENTIFIER  shift, and go to state 9


State 5

    2 commands: commands command .

    $default  reduce using rule 2 (commands)


State 6

    4 command: arg .

    $default  reduce using rule 4 (command)


State 7

    3 command: def .

    $default  reduce using rule 3 (command)


State 8

   33 $@7: . %empty
   34 def: DEF IDENTIFIER . $@7 '{' recusive_def_branch '}'

    $default  reduce using rule 33 ($@7)

    $@7  go to state 10


State 9

   15 $@1: . %empty
   17 arg: ARG IDENTIFIER . $@1 '{' $@2 template_defs '}'

    $default  reduce using rule 15 ($@1)

    $@1  go to state 11


State 10

   34 def: DEF IDENTIFIER $@7 . '{' recusive_def_branch '}'

    '{'  shift, and go to state 12


State 11

   17 arg: ARG IDENTIFIER $@1 . '{' $@2 template_defs '}'

    '{'  shift, and go to state 13


State 12

   19 arg_template: . ARG_TEMPLATE '{' $@3 template_defs '}'
   21 assemble: . ASSEMBLE '{' $@4 STRING '}'
   23 max: . MAX '{' $@5 template_defs '}'
   25 encode: . ENCODE '{' $@6 STRING '}'
   26 def_branch: . assemble
   27           | . arg_template
   28           | . max
   29           | . encode
   30           | . %empty  [ENCODE, MAX, ARG_TEMPLATE, ASSEMBLE, '}']
   31 recusive_def_branch: . def_branch
   32                    | . recusive_def_branch def_branch
   34 def: DEF IDENTIFIER $@7 '{' . recusive_def_branch '}'

    ENCODE        shift, and go to state 14
    MAX           shift, and go to state 15
    ARG_TEMPLATE  shift, and go to state 16
    ASSEMBLE      shift, and go to state 17

    ENCODE        [reduce using rule 30 (def_branch)]
    MAX           [reduce using rule 30 (def_branch)]
    ARG_TEMPLATE  [reduce using rule 30 (def_branch)]
    ASSEMBLE      [reduce using rule 30 (def_branch)]
    $default      reduce using rule 30 (def_branch)

    arg_template         go to state 18
    assemble             go to state 19
    max                  go to state 20
    encode               go to state 21
    def_branch           go to state 22
    recusive_def_branch  go to state 23


State 13

   16 $@2: . %empty
   17 arg: ARG IDENTIFIER $@1 '{' . $@2 template_defs '}'

    $default  reduce using rule 16 ($@2)

    $@2  go to state 24


State 14

   25 encode: ENCODE . '{' $@6 STRING '}'

    '{'  shift, and go to state 25


State 15

   23 max: MAX . '{' $@5 template_defs '}'

    '{'  shift, and go to state 26


State 16

   19 arg_template: ARG_TEMPLATE . '{' $@3 template_defs '}'

    '{'  shift, and go to state 27


State 17

   21 assemble: ASSEMBLE . '{' $@4 STRING '}'

    '{'  shift, and go to state 28


State 18

   27 def_branch: arg_template .

    $default  reduce using rule 27 (def_branch)


State 19

   26 def_branch: assemble .

    $default  reduce using rule 26 (def_branch)


State 20

   28 def_branch: max .

    $default  reduce using rule 28 (def_branch)


State 21

   29 def_branch: encode .

    $default  reduce using rule 29 (def_branch)


State 22

   31 recusive_def_branch: def_branch .

    $default  reduce using rule 31 (recusive_def_branch)


State 23

   19 arg_template: . ARG_TEMPLATE '{' $@3 template_defs '}'
   21 assemble: . ASSEMBLE '{' $@4 STRING '}'
   23 max: . MAX '{' $@5 template_defs '}'
   25 encode: . ENCODE '{' $@6 STRING '}'
   26 def_branch: . assemble
   27           | . arg_template
   28           | . max
   29           | . encode
   30           | . %empty  [ENCODE, MAX, ARG_TEMPLATE, ASSEMBLE, '}']
   32 recusive_def_branch: recusive_def_branch . def_branch
   34 def: DEF IDENTIFIER $@7 '{' recusive_def_branch . '}'

    ENCODE        shift, and go to state 14
    MAX           shift, and go to state 15
    ARG_TEMPLATE  shift, and go to state 16
    ASSEMBLE      shift, and go to state 17
    '}'           shift, and go to state 29

    ENCODE        [reduce using rule 30 (def_branch)]
    MAX           [reduce using rule 30 (def_branch)]
    ARG_TEMPLATE  [reduce using rule 30 (def_branch)]
    ASSEMBLE      [reduce using rule 30 (def_branch)]
    '}'           [reduce using rule 30 (def_branch)]

    arg_template  go to state 18
    assemble      go to state 19
    max           go to state 20
    encode        go to state 21
    def_branch    go to state 30


State 24

   11 template_def: . %empty  [',', '}']
   12             | . '(' identifiers ')' '{' template_def_permissives '}'
   13 template_defs: . template_def
   14              | . template_defs ',' template_def
   17 arg: ARG IDENTIFIER $@1 '{' $@2 . template_defs '}'

    '('  shift, and go to state 31

    $default  reduce using rule 11 (template_def)

    template_def   go to state 32
    template_defs  go to state 33


State 25

   24 $@6: . %empty
   25 encode: ENCODE '{' . $@6 STRING '}'

    $default  reduce using rule 24 ($@6)

    $@6  go to state 34


State 26

   22 $@5: . %empty
   23 max: MAX '{' . $@5 template_defs '}'

    $default  reduce using rule 22 ($@5)

    $@5  go to state 35


State 27

   18 $@3: . %empty
   19 arg_template: ARG_TEMPLATE '{' . $@3 template_defs '}'

    $default  reduce using rule 18 ($@3)

    $@3  go to state 36


State 28

   20 $@4: . %empty
   21 assemble: ASSEMBLE '{' . $@4 STRING '}'

    $default  reduce using rule 20 ($@4)

    $@4  go to state 37


State 29

   34 def: DEF IDENTIFIER $@7 '{' recusive_def_branch '}' .

    $default  reduce using rule 34 (def)


State 30

   32 recusive_def_branch: recusive_def_branch def_branch .

    $default  reduce using rule 32 (recusive_def_branch)


State 31

    5 identifiers: . IDENTIFIER
    6            | . identifiers ',' IDENTIFIER
   12 template_def: '(' . identifiers ')' '{' template_def_permissives '}'

    IDENTIFIER  shift, and go to state 38

    identifiers  go to state 39


State 32

   13 template_defs: template_def .

    $default  reduce using rule 13 (template_defs)


State 33

   14 template_defs: template_defs . ',' template_def
   17 arg: ARG IDENTIFIER $@1 '{' $@2 template_defs . '}'

    ','  shift, and go to state 40
    '}'  shift, and go to state 41


State 34

   25 encode: ENCODE '{' $@6 . STRING '}'

    STRING  shift, and go to state 42


State 35

   11 template_def: . %empty  [',', '}']
   12             | . '(' identifiers ')' '{' template_def_permissives '}'
   13 template_defs: . template_def
   14              | . template_defs ',' template_def
   23 max: MAX '{' $@5 . template_defs '}'

    '('  shift, and go to state 31

    $default  reduce using rule 11 (template_def)

    template_def   go to state 32
    template_defs  go to state 43


State 36

   11 template_def: . %empty  [',', '}']
   12             | . '(' identifiers ')' '{' template_def_permissives '}'
   13 template_defs: . template_def
   14              | . template_defs ',' template_def
   19 arg_template: ARG_TEMPLATE '{' $@3 . template_defs '}'

    '('  shift, and go to state 31

    $default  reduce using rule 11 (template_def)

    template_def   go to state 32
    template_defs  go to state 44


State 37

   21 assemble: ASSEMBLE '{' $@4 . STRING '}'

    STRING  shift, and go to state 45


State 38

    5 identifiers: IDENTIFIER .

    $default  reduce using rule 5 (identifiers)


State 39

    6 identifiers: identifiers . ',' IDENTIFIER
   12 template_def: '(' identifiers . ')' '{' template_def_permissives '}'

    ','  shift, and go to state 46
    ')'  shift, and go to state 47


State 40

   11 template_def: . %empty  [',', '}']
   12             | . '(' identifiers ')' '{' template_def_permissives '}'
   14 template_defs: template_defs ',' . template_def

    '('  shift, and go to state 31

    $default  reduce using rule 11 (template_def)

    template_def  go to state 48


State 41

   17 arg: ARG IDENTIFIER $@1 '{' $@2 template_defs '}' .

    $default  reduce using rule 17 (arg)


State 42

   25 encode: ENCODE '{' $@6 STRING . '}'

    '}'  shift, and go to state 49


State 43

   14 template_defs: template_defs . ',' template_def
   23 max: MAX '{' $@5 template_defs . '}'

    ','  shift, and go to state 40
    '}'  shift, and go to state 50


State 44

   14 template_defs: template_defs . ',' template_def
   19 arg_template: ARG_TEMPLATE '{' $@3 template_defs . '}'

    ','  shift, and go to state 40
    '}'  shift, and go to state 51


State 45

   21 assemble: ASSEMBLE '{' $@4 STRING . '}'

    '}'  shift, and go to state 52


State 46

    6 identifiers: identifiers ',' . IDENTIFIER

    IDENTIFIER  shift, and go to state 53


State 47

   12 template_def: '(' identifiers ')' . '{' template_def_permissives '}'

    '{'  shift, and go to state 54


State 48

   14 template_defs: template_defs ',' template_def .

    $default  reduce using rule 14 (template_defs)


State 49

   25 encode: ENCODE '{' $@6 STRING '}' .

    $default  reduce using rule 25 (encode)


State 50

   23 max: MAX '{' $@5 template_defs '}' .

    $default  reduce using rule 23 (max)


State 51

   19 arg_template: ARG_TEMPLATE '{' $@3 template_defs '}' .

    $default  reduce using rule 19 (arg_template)


State 52

   21 assemble: ASSEMBLE '{' $@4 STRING '}' .

    $default  reduce using rule 21 (assemble)


State 53

    6 identifiers: identifiers ',' IDENTIFIER .

    $default  reduce using rule 6 (identifiers)


State 54

    7 template_def_permissive: . IDENTIFIER
    8                        | . NUMBER
    9 template_def_permissives: . template_def_permissive
   10                         | . template_def_permissives ',' template_def_permissive
   12 template_def: '(' identifiers ')' '{' . template_def_permissives '}'

    IDENTIFIER  shift, and go to state 55
    NUMBER      shift, and go to state 56

    template_def_permissive   go to state 57
    template_def_permissives  go to state 58


State 55

    7 template_def_permissive: IDENTIFIER .

    $default  reduce using rule 7 (template_def_permissive)


State 56

    8 template_def_permissive: NUMBER .

    $default  reduce using rule 8 (template_def_permissive)


State 57

    9 template_def_permissives: template_def_permissive .

    $default  reduce using rule 9 (template_def_permissives)


State 58

   10 template_def_permissives: template_def_permissives . ',' template_def_permissive
   12 template_def: '(' identifiers ')' '{' template_def_permissives . '}'

    ','  shift, and go to state 59
    '}'  shift, and go to state 60


State 59

    7 template_def_permissive: . IDENTIFIER
    8                        | . NUMBER
   10 template_def_permissives: template_def_permissives ',' . template_def_permissive

    IDENTIFIER  shift, and go to state 55
    NUMBER      shift, and go to state 56

    template_def_permissive  go to state 61


State 60

   12 template_def: '(' identifiers ')' '{' template_def_permissives '}' .

    $default  reduce using rule 12 (template_def)


State 61

   10 template_def_permissives: template_def_permissives ',' template_def_permissive .

    $default  reduce using rule 10 (template_def_permissives)
